; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kqworkq_get_request.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kqworkq_get_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kqrequest = type { i32 }
%struct.kqworkq = type { %struct.kqrequest* }

@KQWQ_NBUCKETS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.kqrequest* @kqworkq_get_request(%struct.kqworkq* %0, i64 %1) #0 {
  %3 = alloca %struct.kqworkq*, align 8
  %4 = alloca i64, align 8
  store %struct.kqworkq* %0, %struct.kqworkq** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @KQWQ_NBUCKETS, align 8
  %7 = icmp ult i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load %struct.kqworkq*, %struct.kqworkq** %3, align 8
  %11 = getelementptr inbounds %struct.kqworkq, %struct.kqworkq* %10, i32 0, i32 0
  %12 = load %struct.kqrequest*, %struct.kqrequest** %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds %struct.kqrequest, %struct.kqrequest* %12, i64 %13
  ret %struct.kqrequest* %14
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
